Feat : implement best practices (#1186)
* feat : expose endpoint to fetch history by pagination

* Use existing exception rather than creating newer one

* feat : implement best practices

* polish

* Update CustomerControllerTest.java

* Update .gitpod.Dockerfile